tests/golden/type_errors/generic_explicit_unknown_type.cd
fun identity<T>(value: T): T { return value; }
print identity<Missing>(1);
