tests/golden/type_errors/generic_explicit_unknown_type.err
Type error at 2:16: unknown type `Missing`
  print identity<Missing>(1);
                 ^
